--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     width: 100vw;
     height: 100vh;
     background-color: green;
+    font-family: sans-serif;
 }
 
 .mole{
@@ -27,6 +28,36 @@ body{
     color: white;
     
     
+}
+
+.modal{
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+    z-index: 99999;
+    max-width: 90vw;
+
+}
+
+
+.modal button{
+
+    background-color:  blue;
+    color: white;
+    border: none;
+    padding: 10px;
+
+
+}
+.end-modal{
+
+    display: none;
+
 }
 
 .time{
